Sort by title, encryption item count, component resolve refs, DB onblocked, title bar status overlap, clear cache and restart option

--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -905,11 +905,13 @@ a.disabled {
   font-weight: bold;
   padding-top: 0px;
   width: 100%;
+  padding-right: 120px;
+  /* make room for save status */
 }
 #editor-title-bar > .title > .input {
   float: left;
   text-overflow: ellipsis;
-  width: 90%;
+  width: 100%;
   font-weight: bold;
   border: none;
   outline: none;
